--- a/src/components/ServiceTile.astro
+++ b/src/components/ServiceTile.astro
@@ -31,7 +31,7 @@ const { id, title, description } = Astro.props;
 }
 
 #tile-1 {
-  background-color: var(--tile1-bg);
+  background-color: var(--custom-software-bg);
   color: var(--text-light);
 }
 
