--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -28,17 +28,17 @@ input, textarea {
   padding: 1rem;
   border: 3px solid black;
   font-size: 1rem;
-  background-color: rgba(255, 255, 255, 0.2);
-  color: white;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
 }
 
 input::placeholder, textarea::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 input:focus, textarea:focus {
   outline: none;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 textarea {
