--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,10 @@ const { title } = Astro.props;
 	<body>
 		<header>
 			<nav>
-				<div class="logo">Timothy Technologies</div>
+				<div class="logo">
+						<img src="/tt.png" alt="Timothy Technologies Logo" class="logo-img">
+						<span>Timothy Technologies</span>
+					</div>
 				<ul>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#about">About</a></li>
@@ -97,11 +100,18 @@ nav {
 }
 
 .logo {
+    display: flex;
+    align-items: center;
     font-size: 1.5rem;
     font-weight: 900;
     color: white;
     text-transform: uppercase;
     letter-spacing: 1px;
+}
+
+.logo-img {
+    height: 40px;
+    margin-right: 15px;
 }
 
 nav ul {
