Stylistic aesthetic tweaks

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,12 +39,13 @@ const { title } = Astro.props;
 
 		<footer>
 			<div class="footer-content">
-				<p>&copy; 2025 Timothy Technologies. All rights reserved.</p>
+				<p>Timothy Technologies, &copy; MMXXV<br>
+				Built with <a href="https://astro.build" target="_blank" rel="noopener noreferrer" class="astro-link">Astro</a></p>
 				<div class="social-links">
-					<a href="https://github.com/timsidie" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
+					<a href="https://github.com/t-s" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
 						<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="social-icon"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
 					</a>
-					<a href="https://linkedin.com/in/timothy-sidie" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
+					<a href="https://linkedin.com/in/timsidie" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
 						<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="social-icon"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
 					</a>
 				</div>
@@ -257,6 +258,21 @@ footer {
 
 .social-link:hover .social-icon {
     stroke: var(--header-bg);
+}
+
+.astro-link {
+    background-image: linear-gradient(90deg, #FF4545, #32CD32, #39B5FF, #FF4545);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-weight: 700;
+    padding: 0 2px;
+    transition: transform 0.3s ease;
+    display: inline-block;
+}
+
+.astro-link:hover {
+    transform: scale(1.1);
 }
 
 /* Responsive */
