--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -2,8 +2,8 @@
 ---
 
 <section class="hero-tile">
-  <h1>Software Solutions That Matter</h1>
-  <p>Transforming ideas into exceptional digital experiences</p>
+  <h1>Software engineering that produces the results that you need</h1>
+  <p>Providing experience, tenacity, and exceptional, scalable solutions that result in outcomes that delight and energize our clients' projects, for years upon years</p>
   <a href="#contact" class="btn">Work With Us</a>
 </section>
 
@@ -16,5 +16,13 @@
   border: 4px solid black;
   box-shadow: var(--shadow);
   position: relative;
+}
+
+.hero-tile p {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  max-width: 90%;
+  margin: 0 auto 2rem auto;
+  font-weight: 500;
 }
 </style>
