--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -2,7 +2,7 @@
 ---
 
 <section class="hero-tile">
-  <h1>Software engineering that produces the results that you need</h1>
+  <h1>Results-oriented software engineering</h1>
   <p>Providing experience, tenacity, and exceptional, scalable solutions that result in outcomes that delight and energize our clients' projects, for years upon years</p>
   <a href="#contact" class="btn">Work With Us</a>
 </section>
