--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -2,7 +2,7 @@
 ---
 
 <section class="hero-tile">
-  <h1>Results-oriented software engineering</h1>
+  <h1>Results oriented software engineering</h1>
   <p>Providing experience, tenacity, and exceptional, scalable solutions that energize projects and delight our customers</p>
   <a href="#contact" class="btn">Work With Us</a>
 </section>
